--- a/Assignment_1_besvarelse.Rmd
+++ b/Assignment_1_besvarelse.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "«R Notebooks» og reproduserbarhet"
-author: Assignment 1 - MSB 105 - Ole Alexander Bakkevik & Sindre Espedal
+author: "Assignment 1 - MSB 105 - Ole Alexander Bakkevik & Sindre Espedal"
 affiliation: HVL
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
 ---
+
