--- a/Assignment_1_besvarelse.tex
+++ b/Assignment_1_besvarelse.tex
@@ -104,10 +104,16 @@ Espedal}
 \begin{document}
 \maketitle
 
+======= bibliography: reproducibility.bib csl: apa-no-ampersand.csl
+fontsize: 12pt output: pdf\_document: keep\_tex: yes word\_document:
+default html\_document: df\_print: paged html\_notebook: default\\
+link-citations: yes lang: nb-NO ---
+
 \hypertarget{disposisjon-dere-trenger-ikke-dekke-alt-listet-her}{%
 \subsection{disposisjon (dere trenger ikke dekke alt listet
 her)}\label{disposisjon-dere-trenger-ikke-dekke-alt-listet-her}}
 
+\textless\textless\textless\textless\textless\textless\textless{} HEAD
 \textbf{- Innleding}
 
 \textbf{* Reproduserbarhet, R notebooks}
@@ -125,7 +131,30 @@ her)}\label{disposisjon-dere-trenger-ikke-dekke-alt-listet-her}}
   hos}
 \end{itemize}
 
-\textbf{tidsskriftene kunne løse problemet?}
+\hypertarget{tidsskriftene-kunne-luxf8se-problemet}{%
+\section{\texorpdfstring{\textbf{tidsskriftene kunne løse
+problemet?}}{tidsskriftene kunne løse problemet?}}\label{tidsskriftene-kunne-luxf8se-problemet}}
+
+\underline{- Innleding}
+
+\underline{* Reproduserbarhet, R notebooks}
+
+\underline{- Litteraturgjennomgang}
+
+\underline{* Replikerbarhet/reproduserbarhet}
+
+\underline{* Problemets omfang}
+
+\begin{itemize}
+\tightlist
+\item
+  \underline{Vil dagens løsning med arkiv av data og event. programkode
+  hos}
+\end{itemize}
+
+\underline{tidsskriftene kunne løse problemet?}
+\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater{}
+First\_branch
 
 * Mulig løsning (teoretisk plan):
 
@@ -169,6 +198,7 @@ tvinges?
 
 - Litteraturliste
 
+\textless\textless\textless\textless\textless\textless\textless{} HEAD
 jhekfhkewhf \protect\hyperlink{ref-allaire2020}{Allaire et al.}
 (\protect\hyperlink{ref-allaire2020}{2020})
 
@@ -205,5 +235,28 @@ Peng, R. D. (2011). Reproducible {Research} in {Computational Science}.
 \url{https://doi.org/10.1126/science.1213847}
 
 \end{CSLReferences}
+
+\hypertarget{second}{%
+\section{\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater{}
+second}\label{second}}
+
+\hypertarget{litteraturliste-1}{%
+\subsection{litteraturliste}\label{litteraturliste-1}}
+
+\begin{quote}
+\begin{quote}
+\begin{quote}
+\begin{quote}
+\begin{quote}
+\begin{quote}
+\begin{quote}
+First\_branch
+\end{quote}
+\end{quote}
+\end{quote}
+\end{quote}
+\end{quote}
+\end{quote}
+\end{quote}
 
 \end{document}
