--- a/Assignment_1_besvarelse.tex
+++ b/Assignment_1_besvarelse.tex
@@ -113,7 +113,6 @@ link-citations: yes lang: nb-NO ---
 \subsection{disposisjon (dere trenger ikke dekke alt listet
 her)}\label{disposisjon-dere-trenger-ikke-dekke-alt-listet-her}}
 
-\textless\textless\textless\textless\textless\textless\textless{} HEAD
 \textbf{- Innleding}
 
 \textbf{* Reproduserbarhet, R notebooks}
@@ -153,8 +152,6 @@ problemet?}}{tidsskriftene kunne løse problemet?}}\label{tidsskriftene-kunne-lu
 \end{itemize}
 
 \underline{tidsskriftene kunne løse problemet?}
-\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater{}
-First\_branch
 
 * Mulig løsning (teoretisk plan):
 
@@ -198,7 +195,6 @@ tvinges?
 
 - Litteraturliste
 
-\textless\textless\textless\textless\textless\textless\textless{} HEAD
 jhekfhkewhf \protect\hyperlink{ref-allaire2020}{Allaire et al.}
 (\protect\hyperlink{ref-allaire2020}{2020})
 
@@ -215,6 +211,8 @@ tilfredsstillende løsning av problemet
 
 \hypertarget{litteraturliste}{%
 \section{Litteraturliste}\label{litteraturliste}}
+
+::: \{\#refs\}
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
@@ -235,28 +233,5 @@ Peng, R. D. (2011). Reproducible {Research} in {Computational Science}.
 \url{https://doi.org/10.1126/science.1213847}
 
 \end{CSLReferences}
-
-\hypertarget{second}{%
-\section{\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater{}
-second}\label{second}}
-
-\hypertarget{litteraturliste-1}{%
-\subsection{litteraturliste}\label{litteraturliste-1}}
-
-\begin{quote}
-\begin{quote}
-\begin{quote}
-\begin{quote}
-\begin{quote}
-\begin{quote}
-\begin{quote}
-First\_branch
-\end{quote}
-\end{quote}
-\end{quote}
-\end{quote}
-\end{quote}
-\end{quote}
-\end{quote}
 
 \end{document}
