--- a/Assignment_1_besvarelse.tex
+++ b/Assignment_1_besvarelse.tex
@@ -104,11 +104,6 @@ Espedal}
 \begin{document}
 \maketitle
 
-======= bibliography: reproducibility.bib csl: apa-no-ampersand.csl
-fontsize: 12pt output: pdf\_document: keep\_tex: yes word\_document:
-default html\_document: df\_print: paged html\_notebook: default\\
-link-citations: yes lang: nb-NO ---
-
 \hypertarget{disposisjon-dere-trenger-ikke-dekke-alt-listet-her}{%
 \subsection{disposisjon (dere trenger ikke dekke alt listet
 her)}\label{disposisjon-dere-trenger-ikke-dekke-alt-listet-her}}
@@ -210,9 +205,8 @@ tidsskriftenes arkiver av datasett og programkode er en
 tilfredsstillende løsning av problemet
 
 \hypertarget{litteraturliste}{%
-\section{Litteraturliste}\label{litteraturliste}}
-
-::: \{\#refs\}
+\section*{Litteraturliste}\label{litteraturliste}}
+\addcontentsline{toc}{section}{Litteraturliste}
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
