--- a/Assignment_1_besvarelse.Rmd
+++ b/Assignment_1_besvarelse.Rmd
@@ -16,86 +16,19 @@ output:
 link-citations: yes
 lang: nb-NO
 ---
+## Introduksjon
+Her kan kanskje vi kanskje skrive noe i lag, kanskje lettest å skrive i slutten?
 
-## disposisjon (dere trenger ikke dekke alt listet her)
-
-[- Innleding]{.ul}
-
-[\* Reproduserbarhet, R notebooks]{.ul}
-
-[- Litteraturgjennomgang]{.ul}
-
-[\* Replikerbarhet/reproduserbarhet]{.ul}
-
-[\* Problemets omfang]{.ul}
-
--   [Vil dagens løsning med arkiv av data og event. programkode
-    hos]{.ul}
-
-[tidsskriftene kunne løse problemet?]{.ul}
-=======
-
-**- Innleding**
-
-**\* Reproduserbarhet, R notebooks**
-
-**- Litteraturgjennomgang**
-
-**\* Replikerbarhet/reproduserbarhet**
-
-**\* Problemets omfang**
-
--   **Vil dagens løsning med arkiv av data og event. programkode hos**
-
-**tidsskriftene kunne løse problemet?**
-=======
-[- Innleding]{.ul}
-
-[\* Reproduserbarhet, R notebooks]{.ul}
-
-[- Litteraturgjennomgang]{.ul}
-
-[\* Replikerbarhet/reproduserbarhet]{.ul}
-
-[\* Problemets omfang]{.ul}
-
--   [Vil dagens løsning med arkiv av data og event. programkode
-    hos]{.ul}
-
-[tidsskriftene kunne løse problemet?]{.ul}
+## Litteraturgjennomgang 
 
 
-\* Mulig løsning (teoretisk plan):
-
--   «Compendium», «Dynamic document», «code chunck» og «text chunk»
-
-\* Mulig løsning:
-
--   R Notebooks
-
-\- Analyse
-
-\* Løser R notebooks problemet med reproduserbarhet
-
--   helt eller bare delvis
-
-\* Eksempler på «code chunks» («R Code Block») og «text chunck» i R notebook
-
-\* Har forskerne incentiver til å være «reproduserbare», eller må de tvinges?
-
-\* Er økt reproduserbarhet noe som vil tvinge seg frem eller er dagens
-
-økte interesse bare et blaff?
-
-\* Kan reproduserbarhet ha relevans i sektorer utenfor akademia?
-
-\- Konklusjon
-
-\- Litteraturliste
 
 
-## litteraturliste
-=======
+
+
+
+
+
 
 jhekfhkewhf @allaire2020
 
